เพิ่ม cg แต่ละวัน